add location picker service
