# src/antwerpen/controller.ts
@@ -1,11 +1,13 @@
-import createService = require('./service');
-import { ServiceConfig, ContactItem } from './types';
 import { Request, Response, NextFunction } from 'express';
+
+import { LocationItem } from '../types';
+import createService = require('./service');
+import { ServiceConfig } from './types';
 
 const createController = (config: ServiceConfig) => {
     const service = createService(config);
     return (req: Request, res: Response, next: NextFunction) => {
-        service(req.query.search).then((result: ContactItem[]) => {
+        service(req.query.search, req.query.types).then((result: LocationItem[]) => {
             res.json(result);
         }).catch((error: any) => {
             next(error);
